--- a/src/uLearn.Web/Views/Shared/_GroupsFilter.cshtml
+++ b/src/uLearn.Web/Views/Shared/_GroupsFilter.cshtml
@@ -50,7 +50,7 @@
 		"group",
 		groupsListItems,
 		new {
-			@class = "form-control selectpicker",
+			@class = "form-control selectpicker without-backdrop",
 			size = "1",
 			multiple = "true",
 			title = "Выберите группу",
