--- a/src/uLearn.Web/Content/ulearn.css
+++ b/src/uLearn.Web/Content/ulearn.css
@@ -1708,6 +1708,10 @@ h1 .copy-group-link {
 	background-color: #8dbdd8;
 }
 
+.course-statistics thead th.sorted:not(.slide-title) {
+	padding-left: 2px;
+}
+
 .course-statistics thead th.slide-title.sorted:after {
 	position: absolute;
 	bottom: 0;
@@ -1741,7 +1745,7 @@ h1 .copy-group-link {
 .course-statistics .slide-title,
 .course-statistics .slide-max-score {
 	font-size: 10px;
-	padding: 3px 2px;
+	padding: 3px 7px;
 	text-align: center;
 }
 
@@ -1803,15 +1807,27 @@ h1 .copy-group-link {
 
 .course-statistics th,
 .course-statistics td {
-	border-right: 1px solid rgba(100, 100, 100, 0.2);
-	border-bottom: 1px solid rgba(100, 100, 100, 0.2);
+	border-right: 1px solid rgb(220, 220, 240);
+	border-bottom: 1px solid rgb(220, 220, 240);
 	padding: 0 3px;
 }
 
 .course-statistics.with-expanded-scoring-group td:not(.in-expanded-scoring-group):not(.student-name):not(.scoring-group-sum-score):not(:first-child),
 .course-statistics.with-expanded-scoring-group th:not(.in-expanded-scoring-group):not([data-unit-id="sum"]):not(:first-child) {
-	-ms-opacity: 0.3;
-	opacity: 0.3;
+	color: rgba(0, 0, 0, 0.4);
+}
+
+.course-statistics.with-expanded-scoring-group td:not(.in-expanded-scoring-group):not(.student-name):not(.scoring-group-sum-score):not(:first-child) {
+	opacity: 0.4;
+}
+
+.course-statistics.with-expanded-scoring-group th:not(.in-expanded-scoring-group):not([data-unit-id="sum"]):not(:first-child) {
+	background-color: white;
+}
+
+.course-statistics.with-expanded-scoring-group td:not(.in-expanded-scoring-group):not(.student-name):not(.scoring-group-sum-score):not(:first-child) a,
+.course-statistics.with-expanded-scoring-group th:not(.in-expanded-scoring-group):not([data-unit-id="sum"]):not(:first-child) a {
+	color: rgba(66, 139, 202, 0.4);
 }
 
 .course-statistics.with-expanded-scoring-group .in-expanded-scoring-group.scoring-group-score,
@@ -1873,5 +1889,9 @@ h1 .copy-group-link {
 .student-group, 
 .student-group-title {
 	
+}
+
+.course-statistics.sticky-column td.student-name {
+	background-color: white;
 }
 /* End of course statistics*/
