--- a/src/uLearn.Web/Views/Analytics/CourseStatistics.cshtml
+++ b/src/uLearn.Web/Views/Analytics/CourseStatistics.cshtml
@@ -37,7 +37,7 @@
 		{
 			@Html.Hidden("courseId", Model.Course.Id)
 
-			<div id="filters" class="hidden-xs-inline">
+			<div id="filters">
 				@Html.Partial("~/Views/Shared/_GroupsFilter.cshtml", new GroupsFilterViewModel
 				   {
 					   CourseId = Model.Course.Id,
@@ -62,6 +62,7 @@
 							<label for="scoring-group__@scoringGroup.Id">
 								@scoringGroup.Name (@scoringGroup.Abbreviation)
 							</label>
+							<span class="glyphicon glyphicon-refresh glyphicon-refresh-animate loading-icon" style="display: none"></span>
 						</div>
 					}
 				</div>
@@ -73,6 +74,7 @@
 					<label for="grouping-by-group">
 						По группам
 					</label>
+					<span class="glyphicon glyphicon-refresh glyphicon-refresh-animate loading-icon" style="display: none"></span>
 				</div>
 			</div>
 		</div>
