--- a/src/uLearn.Web/Views/Course/CourseInstructorNavbar.cshtml
+++ b/src/uLearn.Web/Views/Course/CourseInstructorNavbar.cshtml
@@ -3,13 +3,15 @@
 
 @if (Model != null)
 {
-	<li><a href="@Url.RouteUrl("Course.Slide", new { Model.CourseId })">@Model.CourseTitle.TruncateWithEllipsis(40)</a></li>
+
 	<li class="dropdown">
-		<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-cog hidden-xs visible-sm"></span><span class="visible-xs">Преподавателю <span class="caret"></span></span></a>
-		<ul class="dropdown-menu">
+		<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span>@Model.CourseTitle.TruncateWithEllipsis(40) <span class="caret"></span></span></a>
+		<ul class="dropdown-menu pull-right">
+			<li>@Html.RouteLink("Просмотр курса", "Course.Slide", new { Model.CourseId }, new { })</li>
+			<li class="divider" role="separator"></li>
 			<li>@Html.ActionLink("Группы", "Groups", "Admin", new { Model.CourseId }, new { })</li>
-			<li><a href="@Url.Action("CourseStatistics", "Analytics", new { Model.CourseId })">Статистика курса <sup>&beta;</sup></a></li>
-			<li>@Html.ActionLink("Статистика модулей", "UnitStatistics", "Analytics", new { Model.CourseId }, new { })</li>
+			<li><a href="@Url.Action("CourseStatistics", "Analytics", new { Model.CourseId })">Ведомость курса <sup>&beta;</sup></a></li>
+			<li>@Html.ActionLink("Ведомость модуля", "UnitStatistics", "Analytics", new { Model.CourseId }, new { })</li>
 			<li>@Html.ActionLink("Сертификаты", "Certificates", "Admin", new { Model.CourseId }, new { })</li>
 			@if (User.HasAccessFor(Model.CourseId, CourseRole.CourseAdmin))
 			{
