--- a/src/uLearn.Web/Views/SlideNavigation/TableOfContents.cshtml
+++ b/src/uLearn.Web/Views/SlideNavigation/TableOfContents.cshtml
@@ -24,6 +24,10 @@
 {
 	<ul class="nav">
 		<li class="units-list-item full-width units-list-item-text course-name"><a data-score="@SlideHtml.Score(toc.Score, toc.MaxScore)">@toc.Course.Title</a></li>
+		@foreach (var group in toc.GroupsForStatistics)
+		{
+			<li class="full-width group-statistics-link"><a href="@group.StatisticsUrl"><span class="fa fa-list"></span>Ведомость @group.GroupName</a></li>
+		}
 		@{
 			int iUnit = 0;
 			foreach (var unit in toc.Units)
@@ -90,7 +94,7 @@
 {
 	string progressClass;
 	string typeClass;
-	if (page.PageType == TocPageType.InstructorNotes || page.PageType == TocPageType.Statistics)
+	if (page.PageType == TocPageType.InstructorNotes || page.PageType == TocPageType.UnitStatistics)
 	{
 		typeClass = "glyphicon-eye-close";
 		progressClass = "navbar-label-privileged";
